--- a/src/main/webapp/resources/administration/css/bootstrap-override.css
+++ b/src/main/webapp/resources/administration/css/bootstrap-override.css
@@ -2,6 +2,15 @@ html {
 	overflow-y: scroll;
 }
 
+#navbar {
+	margin-left: -15px;
+	margin-right: -15px;
+}
+
+#navbar .navbar-toggle {
+	right: 15px;
+}
+
 #backoffice-menu-main li.accordion {
 	margin-bottom: 0;
 }
